This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: [curses.panel] Failed panel.set_userptr will decrement refcount of original userptr
Type: Stage: resolved
Components: Library (Lib) Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: maarten, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2020-08-21 00:16 by maarten, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 21933 merged maarten, 2020-08-21 00:28
PR 24403 merged serhiy.storchaka, 2021-01-31 18:54
PR 24406 merged miss-islington, 2021-01-31 19:44
Messages (4)
msg375738 - (view) Author: Maarten (maarten) * Date: 2020-08-21 00:16
When ncurses' function `set_panel_userptr` fails,
panel.set_userptr should not decrement the reference count of the previous userptr.
msg386031 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-01-31 17:55
New changeset 3243e8a4b4b4cf321f9b28335d565742a34b1976 by Anonymous Maarten in branch 'master':
bpo-41604: Don't decrement the reference count of the previous user_ptr when set_panel_usertpr fails (GH-21933)
https://github.com/python/cpython/commit/3243e8a4b4b4cf321f9b28335d565742a34b1976
msg386039 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-01-31 19:44
New changeset 3c8d6934436e20163be802f5239c5b4e4925eeec by Serhiy Storchaka in branch '3.9':
[3.9] bpo-41604: Don't decrement the reference count of the previous user_ptr when set_panel_usertpr fails (GH-21933). (GH-24403)
https://github.com/python/cpython/commit/3c8d6934436e20163be802f5239c5b4e4925eeec
msg386041 - (view) Author: miss-islington (miss-islington) Date: 2021-01-31 20:51
New changeset 931263baab62b1c3fa7647e45ec6ee6ef4409e7c by Miss Islington (bot) in branch '3.8':
[3.9] bpo-41604: Don't decrement the reference count of the previous user_ptr when set_panel_usertpr fails (GH-21933). (GH-24403)
https://github.com/python/cpython/commit/931263baab62b1c3fa7647e45ec6ee6ef4409e7c
History
Date User Action Args
2022-04-11 14:59:35adminsetgithub: 85770
2021-01-31 20:52:12serhiy.storchakasetstatus: open -> closed
stage: patch review -> resolved
resolution: fixed
versions: - Python 3.5, Python 3.6, Python 3.7
2021-01-31 20:51:49miss-islingtonsetmessages: + msg386041
2021-01-31 19:44:51miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request23221
2021-01-31 19:44:34serhiy.storchakasetmessages: + msg386039
2021-01-31 18:54:56serhiy.storchakasetpull_requests: + pull_request23218
2021-01-31 17:55:23serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg386031
2020-08-21 00:28:17maartensetkeywords: + patch
stage: patch review
pull_requests: + pull_request21046
2020-08-21 00:16:10maartencreate