bpo-41604: Don't decrement the reference count of the previous user_ptr when set_panel_usertpr fails